trying a new appraoch using lstm

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -268,7 +268,7 @@
    ],
    "source": [
     "\n",
-    "sns.lineplot(data = df,x=df.Date,y=df.High);"
+    "sns.lineplot(data = df,x=df.High,y=df.High);"
    ]
   },
   {
@@ -289,7 +289,7 @@
    ],
    "source": [
     "\n",
-    "sns.lineplot(data = df,x=df.Date,y=df.Low);"
+    "sns.lineplot(data = df,x=df.Low,y=df.Low);"
    ]
   },
   {
